--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "rxbroker",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "rootDir": "src",
   "scripts": {
     "format": "prettier-eslint src/**/*.ts --write",
