--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,34 @@
 {
-    "compilerOptions": {
-      "target": "es2017",
-      "module": "commonjs",
-      "moduleResolution": "node",
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "removeComments": false,
-      "noImplicitAny": false,
-      "noEmitOnError": true,
-      "outDir": "dist",
-      "rootDir": "./src",
-      "importHelpers": true,
-      "alwaysStrict": true,
-      "inlineSourceMap": true,
-      "inlineSources": true,
-      "noUnusedLocals": true,
-      "esModuleInterop": true,
-      "skipLibCheck": true,
-    },
-    "compileOnSave": false,
-    "include": [
-      "src/**/*.ts"
+  "compilerOptions": {
+    "target": "es2017",
+    "lib": [
+      "es2015"
     ],
-    "exclude": [
-      "dist",
-      "node_modules",
-      "node_modules_prod"
-    ]
-  }
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "removeComments": false,
+    "noImplicitAny": false,
+    "noEmitOnError": true,
+    "outDir": "dist",
+    "rootDir": "./src",
+    "importHelpers": true,
+    "alwaysStrict": true,
+    "inlineSourceMap": true,
+    "inlineSources": true,
+    "noUnusedLocals": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "declaration": true,
+  },
+  "compileOnSave": false,
+  "include": [
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "dist",
+    "node_modules",
+    "node_modules_prod"
+  ]
+}
